--- a/.golangci.yml
+++ b/.golangci.yml
@@ -41,6 +41,12 @@ linters:
     - ireturn
     - exhaustruct
     - nonamedreturns
+    - nosnakecase
+    - structcheck
+    - varcheck
+    - deadcode
+    - testableexamples
+    - dupword
 
 issues:
   exclude-use-default: false
@@ -59,5 +65,6 @@ issues:
       path: "_test.go"
     - linters:
         - errcheck # Error checking omitted for brevity.
+        - gosec
       path: "example_"
 
