--- a/.golangci.yml
+++ b/.golangci.yml
@@ -22,53 +22,49 @@ linters-settings:
 linters:
   enable-all: true
   disable:
-    - spancheck
+    - intrange
+    - copyloopvar
     - lll
-    - maligned
     - gochecknoglobals
-    - gomnd
     - wrapcheck
     - paralleltest
     - forbidigo
-    - exhaustivestruct
-    - interfacer # deprecated
     - forcetypeassert
-    - scopelint # deprecated
-    - ifshort # too many false positives
-    - golint # deprecated
     - varnamelen
     - tagliatelle
     - errname
     - ireturn
     - exhaustruct
     - nonamedreturns
-    - nosnakecase
-    - structcheck
-    - varcheck
-    - deadcode
     - testableexamples
     - dupword
     - depguard
     - tagalign
+    - mnd
+    - testifylint
+    - recvcheck
 
 issues:
   exclude-use-default: false
   exclude-rules:
     - linters:
-        - testifylint
-        - gomnd
+        - gosec
+      text: 'G115: integer overflow conversion'
+    - linters:
+        - mnd
         - goconst
-        - goerr113
         - noctx
         - funlen
         - dupl
         - structcheck
         - unused
         - unparam
-        - nosnakecase
       path: "_test.go"
     - linters:
         - errcheck # Error checking omitted for brevity.
         - gosec
       path: "example_"
+    - linters:
+        - revive
+      text: "unused-parameter: parameter"
 
